# periodic-table

./: .gitignore  MANIFEST.in  README.md  build_modules.py  element-bonds.json  element-colors.json  element-vdwRadii.json  package-lock.json  package.json  periodic-table.json  pyproject.toml
.github/workflows/: branch.yml  cicd.yml  dev.yml
src/js/: element.js  generate.js  index.js  units.js
src/py/mat3ra/periodic_table/: __init__.py  bonds.py  colors.py
src/py/periodic_table/: __init__.py
tests/js/: index.js
tests/py/unit/: test_base.py
