[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "mat3ra-periodic-table"
dynamic = ["version"]
description = "Data for the Periodic Table of Elements"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Exabyte Inc.", email = "info@mat3ra.com" }]
dependencies = [
    ## Add here
    # "drmaa>=0.7.6",
]

[project.optional-dependencies]
tests = ["coverage[toml]>=5.3"]
all = ["mat3ra-periodic-table[tests]"]

[tool.setuptools_scm]
git_describe_command = 'git describe --tags --long'

[tool.setuptools.packages.find]
where = ["src/py"]
exclude = [
    "src/js",
    "tests/*",
    "dist/*",
]

[tool.black]
line-length = 120
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
)
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "src/js",
]
line-length = 120
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
    "deploymanager",
]
testpaths = [
    "tests"
]
